// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorHead test on android renders 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "paddingTop": 30,
          "width": "100%",
        }
      }
    >
      <Text
        accessibilityLabel="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 30,
          }
        }
        testID="author-name"
      >
        
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "paddingBottom": 32,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 16,
              "lineHeight": 26,
              "textAlign": "center",
            }
          }
          testID="author-bio"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AuthorHead test on android renders the loading state 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F9F8F3",
        "minHeight": 264,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "height": 100,
        "position": "absolute",
        "top": 30,
        "width": 100,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#FFFFFF",
          "borderRadius": 50,
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <ARTSurfaceView
          style={
            Object {
              "bottom": 0,
              "height": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <ARTShape
            d={
              Array [
                2,
                0,
                0,
                2,
                0,
                0,
                2,
                0,
                0,
                2,
                0,
                0,
              ]
            }
            fill={
              Array [
                1,
                0,
                0,
                -0,
                0,
                0.9764705882352941,
                0.9764705882352941,
                0.9764705882352941,
                1,
                0.9294117647058824,
                0.9294117647058824,
                0.9294117647058824,
                1,
                0,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
  </View>
</View>
`;

exports[`AuthorHead test on android renders with data 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "paddingTop": 30,
          "width": "100%",
        }
      }
    >
      <View
        aspectRatio={1}
        style={
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 50,
            "marginBottom": 20,
            "marginLeft": "auto",
            "marginRight": "auto",
            "overflow": "hidden",
            "width": 100,
          }
        }
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200",
              }
            }
            style={
              Object {
                "bottom": 0,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "100%",
              }
            }
          />
          <View
            onLayout={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <ARTSurfaceView
                style={
                  Object {
                    "bottom": 0,
                    "height": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              >
                <ARTShape
                  d={
                    Array [
                      2,
                      0,
                      0,
                      2,
                      0,
                      0,
                      2,
                      0,
                      0,
                      2,
                      0,
                      0,
                    ]
                  }
                  fill={
                    Array [
                      1,
                      0,
                      0,
                      -0,
                      0,
                      0.9764705882352941,
                      0.9764705882352941,
                      0.9764705882352941,
                      1,
                      0.9294117647058824,
                      0.9294117647058824,
                      0.9294117647058824,
                      1,
                      0,
                      1,
                    ]
                  }
                  opacity={1}
                  stroke={null}
                  strokeCap={1}
                  strokeDash={null}
                  strokeJoin={1}
                  strokeWidth={1}
                  transform={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                />
              </ARTSurfaceView>
            </View>
          </View>
        </View>
      </View>
      <Text
        accessibilityLabel="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 30,
          }
        }
        testID="author-name"
      >
        Carol Midgley
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          }
        }
      >
        columnist
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingTop": 8,
          }
        }
      >
        <svg
          height={15}
          width={15}
        >
          <path
            fill="#006699"
          />
        </svg>
        <Text
          accessibilityRole="link"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          href="https://twitter.com/carolmidgley"
          onPress={[Function]}
          style={
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "paddingLeft": 5,
              "textDecorationLine": "none",
            }
          }
        >
          @
          carolmidgley
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 32,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 16,
              "lineHeight": 26,
              "textAlign": "center",
            }
          }
          testID="author-bio"
        >
          Carol Midgley joined 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            The Times
          </Text>
           in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            Times2
          </Text>
           each week and a weekly comment piece on Fridays.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AuthorHead test on android renders without profile picture 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "paddingTop": 30,
          "width": "100%",
        }
      }
    >
      <Text
        accessibilityLabel="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 30,
          }
        }
        testID="author-name"
      >
        Carol Midgley
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          }
        }
      >
        columnist
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingTop": 8,
          }
        }
      >
        <svg
          height={15}
          width={15}
        >
          <path
            fill="#006699"
          />
        </svg>
        <Text
          accessibilityRole="link"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          href="https://twitter.com/carolmidgley"
          onPress={[Function]}
          style={
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "paddingLeft": 5,
              "textDecorationLine": "none",
            }
          }
        >
          @
          carolmidgley
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 32,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 16,
              "lineHeight": 26,
              "textAlign": "center",
            }
          }
          testID="author-bio"
        >
          Carol Midgley joined 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            The Times
          </Text>
           in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            Times2
          </Text>
           each week and a weekly comment piece on Fridays.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
